--- a/missinggenes.Rmd
+++ b/missinggenes.Rmd
@@ -50,11 +50,13 @@ Identify genes that are shared by salicifolius and hap1, but not hap2. Adding po
 #hasanortho<-onlysyn %>% 
 #  filter(((hap1!=""|hap2!="")&salicifolius!="")|((hap1!=""|salicifolius!="")&hap2!="")|((hap2!=""|salicifolius!="")&hap1!=""))
 hasanortho_justsal<-onlysyn %>% 
-  filter((hap1!=""|hap2!="")&salicifolius!="")#|((hap1!=""|salicifolius!="")&hap2!="")|((hap2!=""|salicifolius!="")&hap1!=""))
+  filter((hap1!=""|hap2!="")&salicifolius!="")#|((hap1!=""|salicifolius!="")&hap2!="")|((hap2!=""|salicifolius!="")&hap1!=""))'
+salorths<-onlysyn_sal %>% filter((hap1!=""|hap2!="")&salicifolius!="")
 # yloss genes - have only ortho shared b/w hap1 and sal. y loss.
 #write_delim(hasanortho,"denomgenelist.txt",delim="\t")
-write_delim(hasanortho_justsal,"denomgenelist_salorth.txt",delim="\t")
-#hap1_yloss<-onlysyn %>% filter(hap1!="" & hap2=="" & salicifolius!="")  
+#write_delim(hasanortho_justsal,"denomgenelist_salorth.txt",delim="\t")
+write_csv(salorths, "denomgenelist_salorths.csv")
+hap1_yloss<-onlysyn %>% filter(hap1!="" & hap2=="" & salicifolius!="")  
 hasanortho<-hasanortho_justsal
 yloss_pars <- hap1_yloss %>% mutate(region=if_else(interpChr =="X" & end<=71000000,"PAR1",
                         if_else(interpChr =="X" & (end>71000000 & end<=261000000),"OldX",
